--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,10 @@
+body {
+    font-family: 'Inter', sans-serif;
+  }
+
 .avatar-circle {
-    width: 32px;
-    height: 32px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     background-color: var(--ion-color-step-150);
     border: 1px solid var(--ion-color-dark);
